--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="/assets/Logo_Isa.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/assets/Logo_Isa.png" sizes="180x180">
+    <link rel="icon" href="/assets/Logo_Isa.png" type="image/png" sizes="64x64">
     <!-- Fuente del Proyecto Raleway -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <title>Mi Portafolio</title>
